Fix horizontal-scrolling issue in scrollbar sidebar areas

--- a/src/components/chart-ui/chart-ui.scss
+++ b/src/components/chart-ui/chart-ui.scss
@@ -23,8 +23,12 @@
   margin-top: 30px;
 }
 
-.pipeline-ui__node-list {
+.pipeline-ui__node-list-container {
   margin: 30px -15px 0;
+}
+
+.pipeline-ui__node-list {
+  margin: 0;
   padding: 0;
   list-style: none;
 }
