--- a/src/components/history/history.scss
+++ b/src/components/history/history.scss
@@ -1,8 +1,12 @@
 @import '../../styles/extends';
 @import '../../styles/variables';
 
-.pipeline-history {
+.pipeline-history-container {
   margin: -15px -30px 30px;
+}
+
+.pipeline-history {
+  margin: 0;
   padding: 0;
   list-style: none;
   overflow: auto;
